chore: remove cyclic dependencies, migrate tests to mockMvc