@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.3.0</version>
 		<relativePath /><!-- lookup parent from repository -->
 	</parent>
 
@@ -22,9 +22,10 @@
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<log4j.version>2.20.0</log4j.version>
-		<testcontainers.version>1.15.2</testcontainers.version>
-		<keycloak.version>19.0.3</keycloak.version>
+		<log4j.version>2.23.1</log4j.version>
+		<postgresql.version>42.7.3</postgresql.version>
+		<testcontainers.version>1.19.8</testcontainers.version>
+		<keycloak.version>24.0.5</keycloak.version>
 		<sonar.organization>inseefr</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
@@ -125,7 +126,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.5.4</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -155,7 +156,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
 			<version>${testcontainers.version}</version>
@@ -172,7 +173,7 @@
 			<artifactId>postgresql</artifactId>
 			<version>${testcontainers.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
@@ -193,7 +194,7 @@
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-netty</artifactId>
-			<version>5.11.1</version>
+			<version>5.15.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.swagger.parser.v3</groupId>
@@ -204,7 +205,7 @@
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-client-java</artifactId>
-			<version>5.11.1</version>
+			<version>5.15.0</version>
 		</dependency>
 		<!-- Swagger -->
 		<dependency>
@@ -231,14 +232,9 @@
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
-			<version>1.8.0</version>
+			<version>1.9.0</version>
 		</dependency>
 		<!-- Manage JSON OBJECT -->
-		<dependency>
-			<groupId>com.vladmihalcea</groupId>
-			<artifactId>hibernate-types-52</artifactId>
-			<version>2.9.11</version>
-		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
@@ -258,7 +254,7 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.8.11</version>
+						<version>0.8.12</version>
 						<executions>
 							<execution>
 								<id>prepare-agent</id>
@@ -303,7 +299,6 @@
 				</executions>
 				<configuration>
 					<executable>true</executable>
-					<fork>true</fork>
 					<addResources>true</addResources>
 					<jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
 					<profiles>
@@ -315,6 +310,15 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.13.0</version>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.liquibase</groupId>
 					<artifactId>liquibase-maven-plugin</artifactId>
@@ -332,37 +336,15 @@
 							<version>${liquibase.version}</version>
 						</dependency>
 						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-starter-data-jpa</artifactId>
-							<version>3.2.2</version>
-						</dependency>
-						<dependency>
 							<groupId>jakarta.xml.bind</groupId>
 							<artifactId>jakarta.xml.bind-api</artifactId>
 							<version>4.0.1</version>
 						</dependency>
-						<!-- <dependency>
-							<groupId>com.fasterxml.jackson.core</groupId>
-							<artifactId>jackson-databind</artifactId>
-							<version>2.11.0</version>
-						</dependency> -->
 						<dependency>
 							<groupId>org.springframework.boot</groupId>
 							<artifactId>spring-boot-starter-validation</artifactId>
 						</dependency>
 
-						<!-- <dependency>
-							<groupId>org.hibernate</groupId>
-							<artifactId>hibernate-validator</artifactId>
-							<version>5.3.5.Final</version>
-							<scope>compile</scope>
-						</dependency>
-						<dependency>
-							<groupId>org.hibernate</groupId>
-							<artifactId>hibernate-java8</artifactId>
-							<version>5.0.10.Final</version>
-							<scope>compile</scope>
-						</dependency> -->
 					</dependencies>
 					<configuration>
 						<changeLogFile>src/main/resources/db/master.xml</changeLogFile>
@@ -391,16 +373,6 @@
 							<include>TestNoAuth.java</include>
 							<include>TestBasicAuth.java</include>
 						</includes>
-						<!--
-						<forkedProcessExitTimeoutInSeconds>500</forkedProcessExitTimeoutInSeconds> -->
-						<!-- <forkCount>1</forkCount> -->
-						<!-- <reuseForks>true</reuseForks> -->
-						<!-- argLine to prevent jacoco argLine override -->
-						<!-- <argLine> -Dfile.encoding=UTF-8 -Xmx2048m -Xmx1G -->
-						<!-- -XX:PermSize=1024m</argLine> -->
-						<!-- <environmentVariables>
-							<TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
-						</environmentVariables> -->
 					</configuration>
 				</plugin>
 			</plugins>
